--- a/index.html
+++ b/index.html
@@ -97,22 +97,22 @@
      <div class="container">
 <!--- HERO SECTION-------------------------------------------------------------------------->
    <section class="hero">
-     <img class="image-feathers" src="images/feathers.jpg" alt="Hero Background Image"/>
-      <img class="logo" src="images/EmilyHeyrmanLogo.png" alt="Emily Heyrman Logo"/>
        <h1>Hello,<br>my name is Emily Heyrman</h1>
-       <h2>I'm a UX/UI Designer bassed in Upper Michigan. Some people look for beautiful places, others make a place beautiful.</h2>
+       <h2>I'm a UX/UI Designer bassed in Upper Michigan.<br> Some people look for beautiful places, others make a place beautiful.</h2>
+       <img class="logo" src="images/EmilyHeyrmanLogo.png" alt="Emily Heyrman Logo"/>
+       <img class="image-feathers" src="images/feathers.jpg" alt="Hero Background Image"/>
    </section>
 <!--- MY STORY (JOURNEY) SECTION------------------------------------------------------------>
         <section class="my-journey" id="Journey">
             <h2>The Story of Me</h2>
-            <p>The journey that led me to this exact moment</p>
+            <p>The journey that led me to<br>this exact moment</p>
               <a class="My-Life-Button" href="journey.html">My Life</a>
             <img class="journey-image" src="images/SummerAndMe.jpg" alt="Personal Image"/>
         </section>
 <!--- SAVE SAFE CASE STUDY SECTION ---------------------------------------------------------->
   <section class="Save-Safe" id="Save-Safe-Section">
       <h2>Save Safe</h2>
-      <p>Cloud storage app for the everyday saver.</p>
+      <p>Cloud storage app for the <br> everyday saver.</p>
       <h3>UX/UI Designer | Prototype</h3>
       <a class="Case-Study-Button" href="project.html">Case Study</a>
       <a class="Prototype-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=261%3A0&viewport=495%2C303%2C0.0218388&scaling=scale-down ">Prototype</a>
