--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--- PAGE HEADER TITLE DISPLAYED----------------------------------------------------------->
     <title>Emily Heyrman | Portfolio</title>
+    <!--- FONT ------------------------------------------------------------------------->
+    <link href='//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,200,300,400,500,600,700,800'
+      rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Source Sans Pro:thin,extra-light,light,100,200,300,400,500,600,700,800'
+      rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Raleway:thin,extra-light,light,100,200,300,400,500,600,700,800'
+      rel='stylesheet' type='text/css'>
+
 <!--- FONT AWESOME ------------------------------------------------------------------------->
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <!--- CUSTOM STYLES ------------------------------------------------------------------------>
@@ -101,6 +109,7 @@
        <h2>I'm a UX/UI Designer bassed in Upper Michigan.<br> Some people look for beautiful places, others make a place beautiful.</h2>
        <img class="logo" src="images/EmilyHeyrmanLogo.png" alt="Emily Heyrman Logo"/>
        <img class="image-feathers" src="images/feathers.jpg" alt="Hero Background Image"/>
+
    </div>
 <!--- MY STORY (JOURNEY) SECTION------------------------------------------------------------>
         <div class="my-journey" id="Journey">
@@ -111,12 +120,12 @@
         </div>
 <!--- SAVE SAFE CASE STUDY SECTION ---------------------------------------------------------->
   <div class="Save-Safe" id="Save-Safe-Section">
+    <img class="Save-Safe-Image" src="images/Save-Safe-Section-Image.png" alt="Save Safe Image on Desktop"/>
       <h2>Save Safe</h2>
-      <p>Cloud storage app for the <br> everyday saver.</p>
+      <p>Cloud storage app.</p>
       <h3>UX/UI Designer | Prototype</h3>
       <a class="Case-Study-Button" href="project.html">Case Study</a>
       <a class="Prototype-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=261%3A0&viewport=495%2C303%2C0.0218388&scaling=scale-down ">Prototype</a>
-        <img class="Save-Safe-Image" src="images/SaveSafeHomePage.jpg" alt="Save Safe Image on Desktop"/>
   </div>
 <!--- LET'S TALK LINK FOOTER SECTION -------------------------------------------------------->
   <div class="footer">
