--- a/journey.html
+++ b/journey.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emily Heyrman's Journey</title>
+    <!--- FONT ------------------------------------------------------------------------->
+    <link href='//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,200,300,400,500,600,700,800'
+      rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Source Sans Pro:thin,extra-light,light,100,200,300,400,500,600,700,800'
+      rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Raleway:thin,extra-light,light,100,200,300,400,500,600,700,800'
+      rel='stylesheet' type='text/css'>
     <!-- Font Awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom Styles -->
