--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
     </div>
   </div>
 </header>
+<!---DESKTOP HEADER START------------------------------------------------------------------->
+      <div id='desktop-header'>
+        <nav id='desktop-nav'>
+          <ul>
+            <li><a href='journey.html'>About</a></li>
+            <li><a href='images/Résumé.png'>Résumé</a></li>
+            <li><a href='#contact'>Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class='clear'></div>
 <!--- GRID CONTAINER------------------------------------------------------------------------>
      <div class="container">
 <!--- HERO SECTION-------------------------------------------------------------------------->
